wtc-intranet/k8s/deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wtc-intranet
  namespace: gz
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - wtc.wingnutstables.com
      secretName: wtc-tls
  rules:
    - host: wtc.wingnutstables.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wtc-intranet-service
                port:
                  number: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: wtc-intranet-service
  namespace: gz
spec:
  type: ClusterIP
  selector:
    app: wtc-intranet
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wtc-intranet
  namespace: gz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wtc-intranet
  template:
    metadata:
      labels:
        app: wtc-intranet
    spec:
      imagePullSecrets:
        - name: ghcr-login-secret
      volumes:
        - name: do-ca
          configMap:
            name: do-ca-cert
      containers:
        - name: wtc-intranet
          volumeMounts:
            - name: do-ca
              mountPath: /etc/ssl/do
              readOnly: true
          image: ghcr.io/dannygypsy/wtc-intranet:3.0.6
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "125m"
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
